# py-singleton

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_singleton/: __init__.py
tests/: test_singleton.py
