[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-singleton"
version = "0.1.1"
description = "Thread-safe singleton and multiton pattern decorators."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["singleton", "pattern", "decorator", "multiton", "design-pattern"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-singleton#readme"
Repository = "https://github.com/philiprehberger/py-singleton"
Issues = "https://github.com/philiprehberger/py-singleton/issues"
Changelog = "https://github.com/philiprehberger/py-singleton/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_singleton"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
